--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     
     <h1>Client "Emails" to Kickstart Projects:</h1>
     <li><a href="briefs/01_task.html">01: Office for Health Improvement and Disparities</a></li>
+    <li><a href="briefs/02_task.html">02: FDA Adverse Event Tracker</a></li>
     <li><a href="briefs/04_task.html">04: Housing</a></li>
     <li><a href="briefs/06_task.html">06: ASDA Letter of Engagement</a></li>
     <li><a href="briefs/07_task.html">07: Leicester City Letter of Engagement</a></li>
