Add module intro section to index.html

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 
     <h1>Data Cleaning Tasks</h1>
     <li><a href="data_cleaning.html">Intro to Data Cleaning</a></li>
-    
-    
+
+    <h2>Intro to the Module</h2>
+    <li><a href="daily/intro.html">Module Intro</a></li>
+
     <h1>Week 1 Walkthroughs:</h1>
     <li><a href="walkthroughs/0introtask.html">Introduction</a></li>
     <li><a href="walkthroughs/linegraphs.html">Line graphs</a></li>
