Change logo image paths to 'briefs/assets/'
Updated image source paths for logos to use 'briefs/assets/' directory.

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
   if(kind === "lcfc") {
     return `
       <img 
-        src="assets/lcfc-logo.png"
+        src="briefs/assets/lcfc-logo.png"
         alt="Leicester City Football Club crest"
         class="crest"
       />
@@ -442,7 +442,7 @@
   if(kind === "ASDA") {
     return `
       <img 
-        src="assets/asda-logo.png"
+        src="briefs/assets/asda-logo.png"
         alt="ASDA logo"
         class="crest"
       />
@@ -452,7 +452,7 @@
   if(kind === "GOVuk") {
     return `
       <img 
-        src="assets/govuk.png"
+        src="briefs/assets/govuk.png"
         alt="GOV.UK logo"
         class="crest"
       />
@@ -462,7 +462,7 @@
   if(kind === "FDA") {
     return `
       <img 
-        src="assets/fda-logo.png"
+        src="briefs/assets/fda-logo.png"
         alt="FDA logo"
         class="crest"
       />
