Change FDA logo image format from PNG to JPEG

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
   if(kind === "FDA") {
     return `
       <img 
-        src="briefs/assets/fda-logo2.png"
+        src="briefs/assets/fda-logo2.jpeg"
         alt="FDA logo"
         class="crest"
       />
