Update index.html with new content and titles

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         section: "Getting started",
         locked: false,
         items: [
-          { title:"Data Cleaning", desc:"Intro to data cleaning", href:"data_cleaning.html" }
+          { title:"Data Cleaning", desc:"A series of tasks to challenge you and improve your data cleaning skills", href:"data_cleaning.html" }
         ]
       },
       {
@@ -382,12 +382,12 @@
         locked: false,
         password: "week2",
         items: [
-          { title:"", desc:"", href:"walkthrough/0introtask.html" },
-          { title:"", desc:"", href:"walkthrough/linegraphs.html" },
-          { title:"", desc:"", href:"walkthrough/scatterplots.html" },
-          { title:"", desc:"", href:"walkthrough/boxplots.html" },
-          { title:"", desc:"", href:"walkthrough/piecharts.html" },
-          { title:"", desc:"", href:"walkthrough/barcharts.html" }
+          { title:"Intro to plotting", desc:"This module uses the cleaned data from the previous session.", href:"walkthroughs/0introtask.html" },
+          { title:"Linegraphs", desc:"", href:"walkthroughs/linegraphs.html" },
+          { title:"Scatterplots", desc:"", href:"walkthroughs/scatterplots.html" },
+          { title:"Boxplots", desc:"", href:"walkthroughs/boxplots.html" },
+          { title:"Piecharts", desc:"", href:"walkthroughs/piecharts.html" },
+          { title:"Bar Charts", desc:"", href:"walkthroughs/barcharts.html" }
         ]
       },
       {
@@ -397,7 +397,7 @@
         items: [
           { title:"", desc:"", href:"Shiny/notes.html" },
           { title:"", desc:"", href:"Shiny/tasks.html" },
-          { title:"", desc:"", href:"Shiny/cheatsheet.html" },
+          { title:"", desc:"", href:"Shiny/cheatsheet.html" }
         ]
       },
       {
