Update R logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
   if(kind === "r-logo") {
     return `
       <img 
-        src="briefs/assets/r-icon.png"
+        src="briefs/assets/r-logo.png"
         alt="R Logo"
         class="crest"
       />
