--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     .btn:focus{ outline:none; box-shadow: var(--shadow), var(--ring); }
 
     .card{
-      background: linear-gradient(180deg, rgba(255,255,255,0.05), rgba(255,255,255,0.02));
+      background:#ffffff;
       border: 1px solid var(--border);
-      border-radius: 18px;
+      border-radius: 16px;
       padding: 14px;
       box-shadow: var(--shadow);
     }
