--- a/index.html
+++ b/index.html
@@ -124,20 +124,15 @@
     /* Sections */
     .section{
       margin-top: 14px;
-      border: 1px solid rgba(255,255,255,0.10);
-      border-radius: 18px;
+      border: 1px solid var(--border);
+      border-radius: 16px;
       overflow:hidden;
-      background: rgba(255,255,255,0.02);
+      background:#ffffff;
     }
     .sectionHead{
       padding: 12px 14px;
-      border-bottom: 1px solid rgba(255,255,255,0.10);
-      background: rgba(255,255,255,0.02);
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
-      flex-wrap:wrap;
+      border-bottom: 1px solid var(--border);
+      background:#f9fafb;
     }
     .sectionHead h2{ margin:0; font-size: 14.5px; letter-spacing:.2px; }
 
