update intro to project

--- a/daily/intro.html
+++ b/daily/intro.html
@@ -150,27 +150,20 @@
           You are here to build decision-support tools that are capable of generating outputs from imperfect data, justify your choices, and communicate findings clearly.
         </div>
       </div>
-
-      <div class="chiprow" aria-label="Module tags">
-        <span class="chip">Role-play</span>
-        <span class="chip">Messy data</span>
-        <span class="chip">Questions before code</span>
-        <span class="chip">Evidence, not vibes</span>
-      </div>
     </div>
   </header>
 
   <main>
     <section class="box role">
-      <div class="kicker">Your identity in this module</div>
+      <div class="kicker">Who are you?</div>
       <p class="mini">
-        You are a junior analyst in a small analytics consultancy that builds dashboards and technical notes for clients.
-        Clients do not ask for plots. They ask for answers, clarity, and recommendations they can act on.
+        You are a junior analyst intern in a small analytics consultancy that builds dashboards and technical notes for clients.
+        Clients do not ask for a specific set of plots but they do ask for answers, clarity, and recommendations they can act on within
+        the scope of an overarching question they may have. In this module it is up to you to decide which approach best tackles the issues at hand.
       </p>
       <div class="callout">
-        <div class="kicker">Rule of the game</div>
         <p style="margin:0.35rem 0 0;">
-          You may make educated assumptions based on the results of research / asking questions to the "contracted companies", BUT you must not make them silently.
+          You may make educated assumptions based on the results of independent research / asking questions to the "contracted companies", BUT you must not make them silently... it is important that you explain and back-up these choices.
         </p>
       </div>
     </section>
@@ -183,39 +176,37 @@
 
       <div class="steps" aria-label="Project lifecycle">
         <div class="step">
-          <div class="n">1) Frame</div>
-          <div class="t">Question</div>
-          <div class="d">What decision is being supported?</div>
+          <div class="t">Frame the Question</div>
+          <div class="d">What decisions are being supported?</div>
         </div>
         <div class="step">
-          <div class="n">2) Interrogate</div>
-          <div class="t">Data</div>
+          <div class="t">Interrogate the Data</div>
           <div class="d">What does one row actually represent?</div>
         </div>
         <div class="step">
-          <div class="n">3) Justify</div>
-          <div class="t">Transform</div>
+          <div class="t">Justify the Transformations</div>
           <div class="d">Cleaning is meaning. Explain every change.</div>
         </div>
         <div class="step">
-          <div class="n">4) Extract</div>
-          <div class="t">Insight</div>
+          <div class="t">Extract Insight from your analysis</div>
           <div class="d">Patterns, comparisons, exceptions.</div>
         </div>
         <div class="step">
-          <div class="n">5) Deliver</div>
-          <div class="t">Communicate</div>
+          <div class="t">Deliver and Communicate your findings effectively</div>
           <div class="d">Make it legible to non-technical people.</div>
         </div>
       </div>
 
       <div class="box tip">
-        <div class="kicker">What “good” looks like</div>
+        <div class="kicker">What does “good” look like?</div>
+        <ul class>
+          <li>... well that's subjective but let's consider a few things;</li>
+        </ul>
         <ul class="checklist">
           <li>The question your output answers is obvious.</li>
           <li>Your transformations are documented and defensible.</li>
-          <li>You avoid over-claiming what the data cannot prove.</li>
-          <li>A stakeholder could plausibly act on what you show.</li>
+          <li>You avoid over-claiming what the data cannot actually prove.</li>
+          <li>A stakeholder is able to consider the inferences you have made and could plausibly act on it.</li>
         </ul>
       </div>
     </section>
