update to module intro

--- a/daily/intro.html
+++ b/daily/intro.html
@@ -212,13 +212,14 @@
     </section>
 
     <section>
-      <h2>First client: A project in Urban Mobility</h2>
+      <h2>Your first client! A project in Urban Mobility</h2>
       <div class="grid two">
         <div class="box">
-          <div class="kicker">Client context</div>
+          <div class="kicker">Client Dossier:</div>
           <p class="mini">
-            The Department for Transport needs a consistent view of usage, reliability, and pricing patterns across modes and cities.
-            They have data, but they need clarity that supports planning and policy.
+            The Department for Transport needs a consistent view of network usage, reliability, and pricing patterns across different modes and cities.
+            They have the data, but they lack the expertise to manipulate it in such a way that they can understand it.
+            With your help they will be able to gain the clarity needed to support planning and policy.
           </p>
           <ul>
             <li>How does ridership change over time?</li>
@@ -229,10 +230,12 @@
         </div>
 
         <div class="box warn">
-          <div class="kicker">Realistic constraints</div>
+          <div class="kicker">What's the catch?</div>
           <p class="mini">
-            The dataset is not perfect. Some fields are redundant. Some choices are ambiguous.
-            This is intentional, because that is what “real data” feels like. In the real world you are expected to do 
+            Nothing comes free, the dataset you are being provided with is not perfect, none of them ever are. Some fields are redundant. Some choices are ambiguous.
+            Sometimes it just looks like a little bit of a mess, you need to appreciate that the data might not come from just one source so it may not be uniform, 
+            it may not even be fully patched together yet.
+            In the case of this task, I apologise, it is all intentional, because again that is what “real data” feels like. In the real world you are expected to do 
             additional research and ask questions to the teams that provided the data. This will all be possible to you in this module.
           </p>
           <ul>
@@ -280,9 +283,9 @@
       </div>
 
       <div class="callout">
-        <div class="kicker">Key mindset</div>
+        <div class="kicker">Key idea</div>
         <p style="margin:0.35rem 0 0;">
-          The point is not complexity. The point is credible, reusable work that others can trust.
+          The point of this project and these tasks is not "complexity". The point is credible, reusable work that others can trust, navigate with ease and reliably make relevant inferences from.
         </p>
       </div>
     </section>
@@ -292,7 +295,7 @@
       <div class="grid two">
         <div class="box">
           <div class="kicker">Your project folder</div>
-          <p class="mini">Keep everything inside one folder so paths do not break and work stays reproducible.</p>
+          <p class="mini">We'll kick off by creating our project structure, try to keep everything inside this folder so that paths do not break and work stays reproducible.</p>
           <pre><code>week1/
   ├─ data_raw/
   ├─ data_clean/
@@ -302,7 +305,7 @@
 
         <div class="box">
           <div class="kicker">Your first script</div>
-          <p class="mini">Write steps you want to keep in a script, not the console.</p>
+          <p class="mini">Write code you want to keep in the script field, not the console where it'll vanish.</p>
           <pre><code># scripts/monday_exploration.R
 library(tidyverse)
 
@@ -313,7 +316,7 @@ library(tidyverse)
     </section>
 
     <section class="box tip">
-      <div class="kicker">If you remember one thing</div>
+      <div class="kicker">Worth remembering:</div>
       <p class="mini">
         Every output you produce should be able to finish this sentence:
         <span class="mono">“This helps the client decide...”</span>
