--- a/daily/intro.html
+++ b/daily/intro.html
@@ -326,7 +326,7 @@ library(tidyverse)
 
   <footer>
     <p style="margin: 16px 0;">
-      Next: you will receive the first project brief and your initial datasets. Then we start with inspection, not plotting.
+      Next: you will receive the first project brief and your initial datasets. We will begin by inspecting, cleaning and structuring this data before we think about plotting.
     </p>
   </footer>
 </body>
